Добавил json сериализцию предметов

--- a/Items/CMakeLists.txt
+++ b/Items/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 3.29)
 
 set(CUR_DIR ${CMAKE_CURRENT_LIST_DIR})
-file(GLOB MarketAPI_src
+file(GLOB Items_src
     "${CUR_DIR}/*.cpp"
 )
 include_directories(
     ${CUR_DIR}
 )
-
-message("MARKET_API")
-message(${MarketAPI_src})
-add_library(MarketAPI ${MarketAPI_src})
+add_library(ItemsPacket ${Items_src})
