--- a/Inventory/CMakeLists.txt
+++ b/Inventory/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.29)
 
-include_directories(${CMAKE_CURRENT_LIST_DIR})
+include_directories(
+    ${CMAKE_CURRENT_LIST_DIR}
+)
 add_library(InventoryProject Inventory.cpp)
